@@ -12,7 +12,7 @@
 # runlevel as the net.* script that needs it.
 depend() {
 	need localmount
-	use coldplug pcmcia usb isdn wlan
+	use pcmcia usb isdn wlan
 
 	# Load any custom depend functions for the given interface
 	# For example, br0 may need eth0 and eth1
